syntax = "proto3";

package mondane.httpcheck;

option go_package = "github.com/shaardie/mondane/httpcheck/proto";

service HTTPCheckService {
    rpc Do (Check) returns (Result);
}

message Check {
    string url = 1;
}
message Result {
    bool success = 1;
    int64 status_code = 2;
    int64 duration = 3;
    string error = 4;
}
